2008-05-07  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstadapter.c: (gst_adapter_available_fast):
	Small code cleanup.

	* libs/gst/base/gstbasesink.c: (gst_base_sink_query_latency),
	(gst_base_sink_set_flushing):
	* libs/gst/base/gstbasesrc.c: (gst_base_src_perform_seek):
	Fix some comments.

2008-05-07  Wim Taymans  <wim.taymans@collabora.co.uk>

	* plugins/elements/gstfakesrc.c: (gst_fake_src_class_init),
	(gst_fake_src_init), (gst_fake_src_set_property),
	(gst_fake_src_get_property), (gst_fake_src_start):
	* plugins/elements/gstfakesrc.h:
	Added format property to control the format of the newsegment events.
	API: GstFakeSrc:format

2008-05-06  Sebastian Dröge  <slomo@circular-chaos.org>

	* win32/common/libgstreamer.def:
	Add gst_pad_has_name() to the exported symbols.

2008-05-06  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/gstpad.c: (gst_pad_alloc_buffer_full):
	* libs/gst/base/gstbasetransform.c:
	(gst_base_transform_prepare_output_buffer):
	Don't allow negative sizes when allocating new buffers.
	Fixes bug #461253.

2008-05-05  Tim-Philipp Müller  <tim.muller at collabora co uk>

	Patch by: Sjoerd Simons <sjoerd at luon net>

	* gst/gstbus.c: (gst_bus_source_dispatch):
	  Don't print a warning if the queue is empty when we try to pop
	  here. That could happen if another thread or callback set the
	  bus to flushing between the source's check/prepare and the
	  dispatch being called (#531538).

2008-05-05  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* plugins/elements/gstmultiqueue.c:
	  Small docs fix.
	
2008-05-05  Sebastian Dröge  <slomo@circular-chaos.org>

	* tests/check/gst/gstvalue.c: (GST_START_TEST), (gst_value_suite):
	Add unit test for deserializing uint64s and check some really large
	numbers in the int64 test.

2008-05-04  Sebastian Dröge  <slomo@circular-chaos.org>

	* tools/gst-inspect.c: (n_print), (print_hierarchy),
	(print_interfaces), (print_element_properties_info),
	(print_signal_info):